test_datas/compile_fail/type_mismatch_return.pgl
package main;

func get_value() int {
    return "not an int";
}

func main() {
    println(get_value());
}
